syntax = "proto3";

package echo;

option go_package = "fasthttp_hpdummy_server/grpc/proto";

// EchoService provides a simple echo service
service EchoService {
  // Echo returns the same message that was sent
  rpc Echo (EchoRequest) returns (EchoResponse);
  
  // StreamEcho streams back messages in real-time
  rpc StreamEcho (stream EchoRequest) returns (stream EchoResponse);
}

// EchoRequest contains the message to echo
message EchoRequest {
  string message = 1;
  int64 timestamp = 2;
}

// EchoResponse contains the echoed message with metadata
message EchoResponse {
  string message = 1;
  int64 request_timestamp = 2;
  int64 response_timestamp = 3;
  string server_hostname = 4;
}

